--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>speed.o</title>
+    <title>Speed.o - Online Speedometer</title>
+    <meta
+      name="description"
+      content="Speed.o lets you check your GPS speed online in seconds! No installation, no ads, just results!"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -15,3 +19,4 @@
     <app-root></app-root>
   </body>
 </html>
+\
